K3S/infrastructure/vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault-sa
      containers:
        - name: vault
          image: hashicorp/vault:1.15.4
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
            - |
              ./vault/scripts/vault-unseal.sh &
              cp /tmp/vault/config/config.hcl /vault/config/config.hcl
              vault server -config=/vault/config/config.hcl
          ports:
            - containerPort: 8200
          readinessProbe:
            exec:
              command: ["vault", "status"]
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&sealedok=true&uninitok=true
              port: 8200
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: vault-config-working
              mountPath: /tmp/vault/config
            - name: vault-config
              mountPath: /vault/config
            - name: vault-data
              mountPath: /vault/data
            - name: unseal-data
              mountPath: /vault/unseal
              subPath: unseal
            - name: vault-secrets
              mountPath: /vault/secrets
            - name: vault-unseal-script
              mountPath: /vault/scripts
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
            runAsUser: 0
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
        - name: vault-config-working
          emptyDir: {}
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-pvc
        - name: unseal-data
          persistentVolumeClaim:
            claimName: unseal-pvc
        - name: vault-secrets
          emptyDir: {}
        - name: vault-unseal-script
          configMap:
            name: vault-auto-unseal
            defaultMode: 0755
