K3S/infrastructure/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-svc
  namespace: secure
spec:
  selector:
    app: vault
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
  type: ClusterIP
